Адаптивное меню и картинки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -46,7 +46,7 @@
   </header>
 
   <main class="content">
-    <div class="intro intro__sedona intro--page-inner">
+    <div class="intro intro__sedona intro__catalog intro--page-inner">
       <img class="intro__img intro__img--sedona" src="img/intro-sedona.svg" alt="Sedona.">
     </div>
     <div class="content__title">
@@ -57,9 +57,9 @@
     <div class="content__block-card">
       <div class="content__card card">
         <picture>
-          <source media="(min-width: 1200px)" srcset="img/card-1-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/card-1-tablet.svg">
-          <img class="card__image--title" src="img/card-1-mobile.svg"
+          <source media="(min-width: 1200px)" srcset="img/card-1-desktop.jpg">
+          <source media="(min-width: 768px)" srcset="img/card-1-tablet.jpg">
+          <img class="card__image--title" src="img/card-1-mobile.jpg"
             alt="Народные просторы. Дорога, уходящая в закат.">
         </picture>
         <h2 class=card__content-title>Неродные просторы</h2>
@@ -70,20 +70,20 @@
       <div class="content__card-list">
         <div class="content__card card">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/card-2-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/card-2-tablet.svg">
-            <img class="card__image" src="img/card-2-mobile.svg" alt="Местная растительность. Кактус на фоне каньона.">
+            <source media="(min-width: 1200px)" srcset="img/card-2-desktop.jpg">
+            <source media="(min-width: 768px)" srcset="img/card-2-tablet.jpg">
+            <img class="card__image" src="img/card-2-mobile.jpg" alt="Местная растительность. Кактус на фоне каньона.">
           </picture>
           <h2 class=card__content-title>Местная растительность</h2>
           <p class="card__content">Автор фото: Сергей</p>
-          <img class="card__likes-img" src="img/card-like-img.jpg" alt="Иконка лайков. Количество лайков:">
+          <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
           <h3 class="card__total-likes">143</h3>
         </div>
         <div class="content__card card">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/card-3-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/card-3-tablet.svg">
-            <img class="card__image" src="img/card-3-mobile.svg"
+            <source media="(min-width: 1200px)" srcset="img/card-3-desktop.jpg">
+            <source media="(min-width: 768px)" srcset="img/card-3-tablet.jpg">
+            <img class="card__image" src="img/card-3-mobile.jpg"
               alt="Дорога на север. Серпантиновая дорога среди горного леса.">
           </picture>
           <h2 class=card__content-title>Дорога на север</h2>
@@ -93,9 +93,9 @@
         </div>
         <div class="content__card card">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/card-4-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/card-4-tablet.svg">
-            <img class="card__image" src="img/card-4-mobile.svg" alt="Мост Дьявола. Фото каньона и простор.">
+            <source media="(min-width: 1200px)" srcset="img/card-4-desktop.jpg">
+            <source media="(min-width: 768px)" srcset="img/card-4-tablet.jpg">
+            <img class="card__image" src="img/card-4-mobile.jpg" alt="Мост Дьявола. Фото каньона и простор.">
           </picture>
           <h2 class=card__content-title>Мост Дьявола</h2>
           <p class="card__content">Автор фото: Антон</p>
