--- a/source/catalog.html
+++ b/source/catalog.html
@@ -200,7 +200,7 @@
         забыть о политике и экономике.</h2>
     </div>
     <div class="content__block-card">
-      <div class="content__card--head card">
+      <div class="content__card content__card--head card">
         <picture>
           <source media="(min-width: 1280px)" srcset="img/card-1-desktop.jpg">
           <source media="(min-width: 768px)" srcset="img/card-1-tablet.jpg">
