--- a/source/index.html
+++ b/source/index.html
@@ -138,7 +138,7 @@
         <use xlink:href="#logo"></use>
       </svg>
     </a>
-    <nav class="nav nav-menu__closed nav__nojs">
+    <nav class="nav nav-menu nav-menu__closed nav-menu__nojs">
       <button class="nav__button reset-list" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -194,9 +194,9 @@
         </div>
         <div class="advantages__city">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/photo-city-desktop.jpg">
-            <source media="(min-width: 768px)" srcset="img/photo-city-tablet.jpg">
-            <img class="advantages__city-img" src="img/photo-city-mobile.jpg" alt="Фото города.">
+            <source media="(min-width: 1200px)" srcset="img/photo-city-desktop.jpg" 1x, srcset="img/photo-city-desktop@2x.jpg" 2x>
+            <source media="(min-width: 768px)" srcset="img/photo-city-tablet.jpg" 1x,  srcset="img/photo-city-tablet@2x.jpg" 2x>
+            <img class="advantages__city-img" src="img/photo-city-mobile.jpg" srcset="img/photo-city-mobile@2x.jpg" alt="Фото города.">
           </picture>
         </div>
       </div>
@@ -240,9 +240,9 @@
         </div>
         <div class="advantages__bridge-photo">
           <picture>
-            <source media="(min-width: 768px)" srcset="img/photo-bridge-desktop.jpg">
-            <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet.jpg">
-            <img class="advantages-list__bridge" src="img/photo-bridge-mobile.jpg" alt="Вид на каньон сверху.">
+            <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop.jpg" 1x, srcset="img/photo-bridge-desktop@2x.jpg" 2x>
+            <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet.jpg" 1x, srcset="img/photo-bridge-tablet@2x.jpg" 2x>
+            <img class="advantages-list__bridge" src="img/photo-bridge-mobile.jpg" srcset="img/photo-bridge-mobile@2x.jpg" alt="Вид на каньон сверху.">
           </picture>
         </div>
       </div>
